<resources>
    <string name="app_name">DefendorBot</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="emailusername">Email or Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="proceed">Proceed</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="titel_childrenlist">Children listening</string>
    <string name="titel_livereport">Live reporting</string>
    <string name="titel_accidentreport">Accident reporting</string>
    <string name="titel_setting">Setting</string>
    <string name="titel_contactus">Contact us</string>
    <string name="title_activity_maps">Map</string>
    <string name="children_listening">Children listening</string>
    <string name="live_reporting">Live reporting</string>
    <string name="accident_reporting">Accident reporting</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact us</string>
    <string name="type_your_message_here">Type your Message here...</string>
    <string name="ok">OK</string>

    <string name="usernameid_blank">Email id or Username field can\'t be blank.</string>
    <string name="username_blank">User Name field can\'t be blank.</string>
    <string name="email_blank">Email field can\'t be blank.</string>
    <string name="email_validate">Please enter valid email.</string>
    <string name="password_blankold">Old Password field can\'t be blank.</string>
    <string name="passcode_blank">Please enter Passcode </string>
    <string name="passcode_valid">Passcode length should be 4.</string>
    <string name="otp_blank">OTP field can\'t be blank.</string>
    <string name="otp_valid">OTP length should be 4.</string>
    <string name="password_blank">Password field can\'t be blank.</string>
    <string name="password_valid">Password length should be greater than 4.</string>
    <string name="confirm_pass_blank">Confirm password field can\'t be blank.</string>
    <string name="confirm_pass_notmatch">Password and Confirm password does not match.</string>
    <string name="title_activity_polygon">Map</string>
    <string name="child_blank">Child Name field can\'t be blank.</string>
    <string name="prent_blank">Parent Name field can\'t be blank.</string>
    <string name="address_blank">Address field can\'t be blank.</string>
    <string name="state_blank">State field can\'t be blank.</string>
    <string name="city_blank">City field can\'t be blank.</string>
    <string name="zipcode_blank">Zipcode field can\'t be blank.</string>
    <string name="phoneno_blank">Mobile Number field can\'t be blank.</string>
    <string name="dob_blank">Date of Birth field can\'t be blank.</string>
    <string name="existingmadical_blank">Existing medical condition field can\'t be blank.</string>
    <string name="bloodtype_blank">Blood Type field can\'t be blank.</string>
    <string name="emgcontact_blank">Emergency Name field can\'t be blank.</string>
    <string name="emgcontactno_blank">Emergency mobile number field can\'t be blank.</string>
    <string name="emgcontactemail_blank">Emergency Email field can\'t be blank.</string>
    <string name="permission_necessary">permission_necessary</string>
    <string name="storage_permission_is_encessary_to_wrote_event">storage permission is ncessary to wrote event</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="set_passcode">Set Passcode</string>
    <string name="user_name">User name</string>

    <string name="area_label">Area: \u0020</string>
    <string name="length_label">Length: \u0020</string>
    <string name="m_label">\u0020 m</string>
    <string name="mm_label">\u0020 m^2</string>
</resources>
