<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.LoginActivity"
    android:background="@color/color_blue_light"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:background="@drawable/circle_blue_top"
                android:gravity="center|bottom"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:background="@drawable/logo"
                    android:visibility="invisible"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingRight="@dimen/_30sdp"
                android:paddingLeft="@dimen/_30sdp"
                >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:hint="@string/new_password"
                    android:textColorHint="@color/colortexthint"
                    android:padding="@dimen/_5sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:ems="10"
                    android:textColor="@android:color/black"
                    android:drawableLeft="@drawable/lockinput"
                    android:background="@drawable/roundrect_button"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:textCursorDrawable="@drawable/color_cursor"
                    />

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:hint="@string/confirm_password"
                    android:textColorHint="@color/colortexthint"
                    android:padding="@dimen/_5sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:ems="10"
                    android:textColor="@android:color/black"
                    android:drawableLeft="@drawable/lockinput"
                    android:background="@drawable/roundrect_button"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textCursorDrawable="@drawable/color_cursor"
                    />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_proceed"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/proceed"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/roundrect_blue_button"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
   <!-- <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_90sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:src="@drawable/ic_arrow_back_blue_24dp"
        />-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_80sdp"
        android:layout_centerHorizontal="true"
        app:maxImageSize="40dp"
        app:fabCustomSize="@dimen/_70sdp"
        android:src="@drawable/lock_input"
        />
</RelativeLayout>