<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/bg_vector"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:background="@drawable/circle_white_top"
                android:gravity="center"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:background="@drawable/logo"
                    android:visibility="visible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingRight="@dimen/_30sdp"
                android:paddingLeft="@dimen/_30sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/roundrect_input"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_mail"
                        />
                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:hint="@string/user_name"
                        android:padding="@dimen/_5sdp"
                        android:ems="10"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:textColor="@android:color/white"
                        android:background="@android:color/transparent"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/lay_roundrect"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/roundrect_input"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_lock"
                        />
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:hint="@string/password"
                        android:padding="@dimen/_5sdp"
                        android:ems="10"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:textColor="@android:color/white"
                        android:background="@android:color/transparent"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColorHint="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:weightSum="2"
                    >
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_signin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/sign_in"
                        android:gravity="center"
                        android:background="@drawable/roundrect_button"
                        android:textAllCaps="false"
                        android:textColor="@android:color/black"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:id="@+id/btn_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Forgot Password?"
                        android:gravity="center"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:layout_weight="1"
                        android:visibility="gone"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    >
                    <ImageView
                        android:id="@+id/iv_fb"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@drawable/fb"
                        />
                    <ImageView
                        android:id="@+id/iv_google"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@drawable/google"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        />
                    <ImageView
                        android:id="@+id/iv_tw"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@drawable/tw"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_blue_dark"
                        android:layout_weight="1.2"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:gravity="center"
                        android:padding="@dimen/_1sdp"
                        android:textColor="@android:color/white"
                        android:layout_weight="0.6"
                        android:textSize="@dimen/_12sdp"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/color_blue_dark"
                        android:layout_weight="1.2"
                        />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/sign_up"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:background="@drawable/roundrect_border_white"
                    android:textAllCaps="false"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>