<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/bg_vector"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:background="@drawable/circle_white_top"
                android:gravity="center"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:background="@drawable/logo"
                    android:visibility="visible"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingRight="@dimen/_30sdp"
                android:paddingLeft="@dimen/_30sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/roundrect_input"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_40sdp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_user"
                        />
                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:hint="User Name"
                        android:padding="@dimen/_5sdp"
                        android:ems="10"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:background="@android:color/transparent"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/roundrect_input"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_mail"
                        />
                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:hint="@string/email"
                        android:padding="@dimen/_5sdp"
                        android:ems="10"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:textColor="@android:color/white"
                        android:background="@android:color/transparent"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/roundrect_input"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_lock"
                        />
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:hint="@string/password"
                        android:padding="@dimen/_5sdp"
                        android:ems="10"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:textColor="@android:color/white"
                        android:background="@android:color/transparent"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColorHint="@android:color/white"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:background="@drawable/roundrect_input"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_20sdp"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_lock"
                        />
                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:hint="@string/confirm_password"
                        android:padding="@dimen/_5sdp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:ems="10"
                        android:textColor="@android:color/white"
                        android:gravity="center"
                        android:layout_marginRight="@dimen/_25sdp"
                        android:background="@android:color/transparent"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColorHint="@android:color/white"
                        />
                </LinearLayout>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:text="@string/sign_up"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/roundrect_button"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_130sdp"
        android:layout_marginLeft="@dimen/_30sdp"
        android:src="@drawable/ic_arrow_back_blue_24dp"
        />
</RelativeLayout>